cfunctions-0.27/tests/bad-inline-2.c
// error: INLINE inside verbatim

#ifdef HEADER
INLINE int func(int a) { return a;}
#endif
